# agente10-supplier-intelligence

./: .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  BRIEFING_TECNICO.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_tenants.py  0002_extend_tenants.py  0003_global_tables.py  0004_tenant_tables.py  0005_seed_cnae_taxonomy.py  0006_empresas_gin.py  0007_spend_clusters_shortlist_flag.py  0008_cnae_correction_audit.py  0009_cache_embedding.py  0010_multi_cnae_and_rich_taxonomy.py  0011_upload_bytes.py  0012_upload_duration.py
backend/data/cnae_2.3/: README.md  notas_ibge.json  taxonomy.json
backend/scripts/: embed_taxonomy.py  embed_taxonomy_rich.py  empresas_helpers.py  load_cnae_taxonomy.py  load_empresas.py  load_ibge_notes.py  parse_ibge_notes.py  parse_ibge_xls.py  run_cnpj_sqlite.sh  run_pipeline.py  seed_classification_cache.py  topn_per_cnae.py  verify_golden_candidates.py
backend/src/agente10/: main.py
backend/tests/: conftest.py  test_cnpj.py  test_config.py  test_health.py  test_tenancy.py
backend/tests/fixtures/: catalogo_golden.csv  catalogo_sintetico.csv  cnae_golden.csv  cnpj_synthetic.sql  empresas_golden.csv
backend/tests/integration/: test_api_cluster_patch.py  test_api_clusters.py  test_api_dashboard.py  test_api_uploads.py  test_api_uploads_list.py  test_cnae_retrieval.py  test_discovery.py  test_pipeline_e2e.py  test_pipeline_idempotency.py  test_pipeline_isolation.py  (+1 more)
(+130 files in other folders)
